--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "ts-dotenv": "^0.8.3"
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-dotenv": "^0.8.3",
+    "typeorm": "^0.2.29"
   }
 }
