--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "ts-dotenv": "^0.8.3",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "typeorm-pagination": "^2.0.3"
   }
 }
